Pagina de contactos añadidos al index

--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 	<body>
 	<p>Este es nuestro proyecto<p>
 	<a href="dqm.html">Pagina de DQM</a>
+	<a href="contactos.html">Pagina de Contactos</a>
 	</body>
 </html>
