--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<body>
 	<p>Este es nuestro proyecto<p><br/><br/>
 	<a href="dqm.html">Pagina de DQM</a><br/><br/>
-	<a href="contactos.html">Pagina de Contactos</a><br/><br/>
+	<a href="contactos.html">Pagina de Javi</a><br/><br/>
 	<a href="andres.html">Pagina de Andres</a><br/><br/>
+	<a href="servicios.html">Pagina de Jose</a><br/><br/>
 	</body>
 </html>
