--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 	<h1>Proyecto para el cliente Think Tic</h1>
 	</head>
 	<body>
-	<p>Este es nuestro proyecto<p>
-	<a href="dqm.html">Pagina de DQM</a>
+	<p>Este es nuestro proyecto<p><br/><br/>
+	<a href="dqm.html">Pagina de DQM</a><br/><br/>
+	<a href="contactos.html">Pagina de Javi</a><br/><br/>
+	<a href="andres.html">Pagina de Andres</a><br/><br/>
+	<a href="servicios.html">Pagina de Jose</a><br/><br/>
 	</body>
 </html>
